// Copyright 2018 the u-root Authors. All rights reserved
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package bmc;

service ManagementService {
  rpc PressButton (ButtonPressRequest) returns (ButtonPressResponse) {}
  rpc SetFan (SetFanRequest) returns (SetFanResponse) {}
  rpc GetFans (GetFansRequest) returns (GetFansResponse) {}
  rpc StreamConsole (stream ConsoleData) returns (stream ConsoleData) {}
  rpc GetVersion (GetVersionRequest) returns (GetVersionResponse) {}
}

enum Button {
  BUTTON_UNSPEC = 0;
  BUTTON_POWER  = 1;
  BUTTON_RESET  = 2;
}

message ButtonPressRequest {
  // Required: which button to press
  Button button = 1;

  // Required: duration in milliseconds for how long to press the button
  uint32 duration_ms = 2;
}

message ButtonPressResponse {

}

enum FanMode {
  FAN_MODE_UNSPEC      = 0;
  FAN_MODE_PERCENTAGE  = 1;
}

message SetFanRequest {
  // Required: which fan to modify
  uint32 fan = 1;

  // Required: which mode to put the fan in
  FanMode mode = 2;

  // Required if mode is PERCENTAGE
  uint32 percentage = 3;
}

message SetFanResponse {

}

message GetFansRequest {

}

message Fan {
  uint32 fan        = 1;

  FanMode mode      = 2;

  uint32 percentage = 3;

  uint32 rpm        = 4;
}

message GetFansResponse {
  repeated Fan fan = 1;
}


message ConsoleData {
  bytes data = 1;
}

message GetVersionRequest {

}

message GetVersionResponse {
  string version = 1;

  string git_hash = 2;
}
